# ADAMSCARMCCOY-CASE_STUDIES

./: .cache  .gitignore  .pre-commit-config.yaml  .venv_fresh.code-workspace  ABELTON_ASSISTANT.code-workspace  Legion_UPDATE-6-13-2026.md  README.md  abelton_assistant_notebook.ipynb  antigravity_horn_audit.ipynb  ask_antigravity_code.py  autonomous_search_clustering.py  build_code_mining_notebook.py  build_web_intel_notebook.py  chat_export.html  check_env.py  check_lancedb.py  check_sources.py  chris_lake_fire_test.py  code_lane_engine.py  code_lane_steps.py  code_lane_v2.py  code_mining_pipeline.html  code_mining_pipeline.ipynb  code_mining_pipeline2.html  core_spider_web.html  deep_scan.py  deterministic_omni_pipeline.py  evaluate_lead.py  export_chat.py  eyes_in_the_sky.js  find_interferences.py  forest_engine_cell.py  fused_web_data.json  gemini_code_lane_cells.md  github_audit.py  headless_audio_processing-github.html  headless_audio_processing-github.ipynb  langgraph_gemini_test.py  lead_assessment_framework.md  legion_pipeline_whitepaper.md  (+18 more)
.github/workflows/: ci.yml  python-app.yml
.jules/: bolt.md
app/: api.py  config.py  database.py  extractor.py  schemas.py
app/templates/: session_prompt.jinja
tests/: test_api.py  test_extractor.py  test_web_intel.py
tools/: prompt_generator.py
