[project]
name = "ableton-session-intelligence"
version = "1.0.0"
description = "Forensic-grade local session intelligence layer for Ableton Live"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.4",
    "duckdb>=1.1",
    "lancedb>=0.17",
    "pyarrow>=18.0",
    "jinja2>=3.1",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "ollama>=0.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "pandas>=3.0.3",
    "numpy>=2.4.6",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
